# libqhr

./: CMakeLists.txt  README.md  release.sh
QHR/: CMakeLists.txt  GetServersJob  abstractconfiguration.cpp  abstractconfiguration.h  abstractnamfactory.cpp  abstractnamfactory.h  bjob.cpp  bjob.h  bjob_p.h  getserversjob.cpp  getserversjob.h  getserversjob_p.h  job.cpp  job.h  job_p.h  logging.h  qhr_global.h
cmake/modules/: qhr-config-version.cmake.in  qhr-config.cmake.in
